--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "ember server",
-    "build": "ember build",
-    "test": "ember test"
+    "test": "mocha --reporter spec tests/**/*-test.js"
   },
   "repository": "https://github.com/stefanpenner/ember-cli",
   "engines": {
@@ -17,18 +15,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "body-parser": "^1.2.0",
-    "broccoli-asset-rev": "0.3.1",
-    "broccoli-ember-hbs-template-compiler": "^1.6.1",
     "ember-cli": "0.1.2",
-    "ember-cli-content-security-policy": "0.3.0",
-    "ember-export-application-global": "^1.0.0",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.0",
-    "ember-data": "1.0.0-beta.10",
-    "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "mocha": "^2.0.1",
+    "rimraf": "^2.2.8",
+    "tmp-sync": "^1.0.1"
   },
   "keywords": [
     "ember-addon"
