--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fs-extra": "^0.12.0",
     "lodash-node": "^2.4.1",
     "mocha": "^2.0.1",
-    "rimraf": "^2.2.8"
+    "rimraf": "^2.2.8",
+    "walk-sync": "^0.1.3"
   },
   "keywords": [
     "ember-addon"
