--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "ember-cli": "0.1.2",
     "fs-extra": "^0.12.0",
+    "inflection": "^1.5.1",
     "lodash-node": "^2.4.1",
     "mocha": "^2.0.1",
     "rimraf": "^2.2.8",
