--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "ember-cli": "0.1.2",
-    "fs-extra": "^0.12.0",
-    "inflection": "^1.5.1",
-    "lodash-node": "^2.4.1",
     "mocha": "^2.0.1",
     "rimraf": "^2.2.8",
     "walk-sync": "^0.1.3"
@@ -28,5 +24,11 @@
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "dependencies": {
+    "fs-extra": "^0.12.0",
+    "lodash-node": "^2.4.1",
+    "inflection": "^1.5.1",
+    "ember-cli": "0.1.2"
   }
 }
