--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "configPath": "tests/dummy/config"
   },
   "dependencies": {
+    "ember-cli": "0.1.2",
+    "ember-router-generator": "^0.1.1",
     "fs-extra": "^0.12.0",
-    "lodash-node": "^2.4.1",
     "inflection": "^1.5.1",
-    "ember-cli": "0.1.2"
+    "lodash-node": "^2.4.1"
   }
 }
