--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "ember-cli": "^0.1.15",
     "ember-router-generator": "^0.1.1",
     "fs-extra": "^0.12.0",
-    "inflection": "^1.5.1",
-    "lodash-node": "^2.4.1"
+    "inflection": "^1.5.1"
   }
 }
