--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "configPath": "tests/dummy/config"
   },
   "dependencies": {
-    "ember-cli": "^0.1.15",
+    "ember-cli": "0.2.3",
     "ember-router-generator": "^0.1.1",
     "fs-extra": "^0.12.0",
     "inflection": "^1.5.1"
