--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "ember-router-generator": "^0.1.1",
     "fs-extra": "^0.12.0",
-    "inflection": "^1.5.1"
+    "inflection": "^1.5.1",
+    "rsvp": "^3.0.18"
   }
 }
