--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: node_js
 
 sudo: false
 
+before_install:
+  - "npm config set spin false"
+  - "npm install -g npm@^2"
+  - "npm config set spin false"
+
 cache:
   directories:
     - node_modules
