--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "author": "Marcio Junior",
   "license": "MIT",
   "devDependencies": {
-    "ember-cli": "0.2.3",
+    "ember-cli": "^1.13.8",
     "ember-cli-release": "0.2.3",
     "mocha": "^2.0.1",
     "mocha-jshint": "^1.0.0",
+    "sinon": "^1.15.4",
     "walk-sync": "^0.1.3"
   },
   "keywords": [
